# BeanBay

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  hatch_build.py  opencode.json  pyproject.toml  skills-lock.json
.github/workflows/: test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: recommend-unspecified-bool-crash.md  recommendation-phase-badge-too-early.md
.planning/milestones/: v0.1.1-MILESTONE-AUDIT.md  v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: main.py
app/models/: brew_setup.py  equipment.py  measurement.py
app/routers/: analytics.py  beans.py  brew.py  equipment.py  history.py  insights.py
app/services/: migration.py  optimizer.py  parameter_registry.py  transfer_learning.py
app/templates/: base.html  home.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: generate-types.sh
frontend/src/: App.tsx  main.tsx  plotly.d.ts
migrations/: env.py
migrations/versions/: 06ff5ca210c4_initial_schema_with_evolution.py  82cc9e91963b_initial_schema.py  (+4 more)
tests/: conftest.py  test_analytics.py  test_beans.py  test_brew.py  test_brew_multimethod.py  test_brew_phase20.py  test_brew_phase21.py  test_equipment.py  test_grinder_bounds.py  test_grinder_helpers.py  test_grinder_integration.py  test_history.py  test_insights.py  test_optimizer.py  test_parameter_registry.py
(+191 files in other folders)
