[project]
name = "beanbay"
dynamic = ["version"]
description = "BeanBay — Phone-first espresso optimization with Bayesian optimization (BayBE)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "baybe>=0.12",
    "fastapi[standard]>=0.115",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "shap>=0.51.0",
    "sqlmodel>=0.0.37",
    "taskiq>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
beanbay = "beanbay.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/beanbay/_version.py"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
artifacts = ["src/beanbay/static/"]

[tool.hatch.build.targets.wheel]
packages = ["src/beanbay"]
artifacts = ["src/beanbay/static/"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (BayBE integration)"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pyright>=1.1.408",
]
